--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-discord.py~=1.6.0
+aiosqlite~=0.17.0
+alembic~=1.7.7
 dataset~=1.3.1
+discord.py~=1.6.0
 python-dotenv~=0.13.0
+sqlalchemy[asyncio]~=1.4.32
