Fix dockerized bot

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
-version: "1"
 services:
   compscibot:
     container_name: compscibot
     image: compscibot
     volumes:
       - compscibot-data:/run/data
+    environment:
+      - DB_PATH=/run/data/bot.db
+    env_file: .env
     restart: always
 
 volumes:
